# depend-py

./: LICENSE.md  README.md  deep_resolve.py  depend.py  pyproject.toml  test.py
depend_py/: deepman.py  eco.py  package.py  resolve.py  utils.py
