[tool.poetry]
name = "depend-py"
version = "0.1.0"
description = ""
authors = ["patrick o'leary <pjaol@pjaol.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "depend_py"}]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^8.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
